--- a/{{cookiecutter.project_dirname}}/.eslintrc.json
+++ b/{{cookiecutter.project_dirname}}/.eslintrc.json
@@ -6,11 +6,22 @@
     }
   },
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
+    "ecmaFeatures": {
+      "jsx": true
+    }
   },
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
-    "standard"
-  ]
+    "standard",
+    "standard-react",
+    "plugin:@typescript-eslint/recommended"
+  ],
+  "rules": {
+    "no-use-before-define": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off",
+    "react/prop-types": 0
+  }
 }
