--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -12,11 +12,11 @@
     "@reduxjs/toolkit": "^1.4.0",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "9.5.5",
+    "next": "^10.0.0",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.4.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
