--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -1,4 +1,6 @@
 BASIC_AUTH_PASSWORD=user
 BASIC_AUTH_USER=password
+INNER_API_URL=https://localhost:8443
 REACT_ENVIRONMENT=Development
+NEXT_PUBLIC_API_URL=https://localhost:8443
 NODE_ENV=development
