--- a/{{cookiecutter.project_dirname}}/.eslintrc.json
+++ b/{{cookiecutter.project_dirname}}/.eslintrc.json
@@ -20,6 +20,7 @@
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
+    "default-param-last": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "react/prop-types": 0
