--- a/{{cookiecutter.project_dirname}}/k8s/production/frontend.yaml
+++ b/{{cookiecutter.project_dirname}}/k8s/production/frontend.yaml
@@ -21,16 +21,6 @@ spec:
           ports:
             - containerPort: 3000
           env:
-            - name: NODE_ENV
-              valueFrom:
-                secretKeyRef:
-                  name: secrets
-                  key: NODE_ENV
-            - name: REACT_ENVIRONMENT
-              valueFrom:
-                secretKeyRef:
-                  name: secrets
-                  key: DJANGO_CONFIGURATION
             - name: BASIC_AUTH_USER
               valueFrom:
                 secretKeyRef:
@@ -41,6 +31,26 @@ spec:
                 secretKeyRef:
                   name: secrets
                   key: BASIC_AUTH_PASSWORD
+            - name: INNER_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: INNER_API_URL
+            - name: NEXT_PUBLIC_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: API_URL
+            - name: NODE_ENV
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: NODE_ENV
+            - name: REACT_ENVIRONMENT
+              valueFrom:
+                secretKeyRef:
+                  name: secrets
+                  key: DJANGO_CONFIGURATION
 
 ---
 
