--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -6,45 +6,96 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "test": "jest",
-    "eslint": "eslint . --fix-dry-run",
+    "test": "npx jest",
+    "eslint": "npx eslint . --fix-dry-run",
     "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^10.0.5",
+    "next": "^10.0.9",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
+    "@testing-library/react": "^11.2.5",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
+    "@types/jest": "^26.0.21",
+    "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
     "@types/react-redux": "^7.1.16",
-    "@types/styled-components": "^5.1.7",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
+    "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.18.0",
-    "eslint-config-standard": "^16.0.2",
-    "eslint-config-standard-react": "^11.0.1",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
-    "typescript": "^4.1.3"
+    "prettier": "^2.2.1",
+    "typescript": "^4.2.3"
+  },
+  "prettier": {
+    "arrowParens": "avoid",
+    "singleQuote": true,
+    "semi": false,
+    "jsxSingleQuote": true,
+    "trailingComma": "none",
+    "useTabs": false
+  },
+  "eslintConfig": {
+    "ignorePatterns": "*.js",
+    "parser": "@typescript-eslint/parser",
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "parserOptions": {
+      "project": "./tsconfig.json",
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "plugins": [
+      "@typescript-eslint",
+      "prettier"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:@typescript-eslint/recommended",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": "error",
+      "@typescript-eslint/explicit-module-boundary-types": "off",
+      "react/prop-types": 0
+    }
+  },
+  "jest": {
+    "testMatch": [
+      "**/__tests__/**/*.test.ts?(x)"
+    ],
+    "moduleNameMapper": {
+      "@babel(.*)$": "<rootDir>/node_modules/@babel$1",
+      "@testing-library(.*)$": "<rootDir>/node_modules/@testing-library$1",
+      "@emotion(.*)$": "<rootDir>/node_modules/@emotion$1",
+      "@reduxjs(.*)$": "<rootDir>/node_modules/@reduxjs$1",
+      "@(.*)$": "<rootDir>/$1"
+    }
   }
 }
