--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -25,6 +25,7 @@
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@pact-foundation/pact": "^9.15.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@types/basic-auth": "^1.1.3",
@@ -45,6 +46,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.22.0",
     "jest": "^26.6.3",
+    "jest-pact": "^0.8.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
   },
@@ -95,6 +97,8 @@
       "@testing-library(.*)$": "<rootDir>/node_modules/@testing-library$1",
       "@emotion(.*)$": "<rootDir>/node_modules/@emotion$1",
       "@reduxjs(.*)$": "<rootDir>/node_modules/@reduxjs$1",
+      "@pact-foundation(.*)$": "<rootDir>/node_modules/@pact-foundation$1",
+      "@jest(.*)$": "<rootDir>/node_modules/@jest$1",
       "@(.*)$": "<rootDir>/$1"
     }
   }
