--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -17,9 +17,10 @@
     "next": "^10.0.9",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-is": "^17.0.2",
+    "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7"
@@ -34,8 +35,8 @@
     "@types/react": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
@@ -43,7 +44,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react": "^7.23.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
@@ -83,7 +84,13 @@
     "rules": {
       "prettier/prettier": "error",
       "@typescript-eslint/explicit-module-boundary-types": "off",
-      "react/prop-types": 0
+      "react/prop-types": 0,
+      "camelcase": [
+        2,
+        {
+          "properties": "always"
+        }
+      ]
     }
   },
   "jest": {
@@ -95,7 +102,7 @@
       "@testing-library(.*)$": "<rootDir>/node_modules/@testing-library$1",
       "@emotion(.*)$": "<rootDir>/node_modules/@emotion$1",
       "@reduxjs(.*)$": "<rootDir>/node_modules/@reduxjs$1",
-      "@(.*)$": "<rootDir>/$1"
+      "@/(.*)$": "<rootDir>/$1"
     }
   }
 }
