--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -12,7 +12,7 @@
     "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
@@ -29,25 +29,25 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "^9.15.3",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.21",
-    "@types/node": "^14.14.35",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.22.0",
+    "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.0",
+    "eslint-plugin-react": "^7.23.1",
     "jest": "^26.6.3",
     "jest-pact": "^0.8.3",
     "prettier": "^2.2.1",
@@ -101,6 +101,7 @@
     "testMatch": [
       "**/__tests__/**/*.test.ts?(x)"
     ],
+    "testEnvironment": "node",
     "moduleNameMapper": {
       "@/(.*)$": "<rootDir>/$1"
     }
