--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
     "mock": "./bin/pact_stub_server.sh",
-    "test": "npx jest",
+    "test": "npx jest --testPathIgnorePatterns=pact/contracts",
+    "pact": "npx jest pact/contracts --testEnvironment=node",
     "eslint": "npx eslint . --fix-dry-run",
     "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json"
   },
@@ -16,7 +17,7 @@
     "axios": "^0.21.1",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^10.0.9",
+    "next": "^10.1.3",
     "next-redux-wrapper": "^6.0.2",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
@@ -24,13 +25,13 @@
     "react-is": "^17.0.2",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^9.15.3",
+    "@pact-foundation/pact": "^9.15.4",
     "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/react": "^11.2.6",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
@@ -38,8 +39,8 @@
     "@types/react": "^17.0.3",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -51,7 +52,7 @@
     "jest": "^26.6.3",
     "jest-pact": "^0.8.3",
     "prettier": "^2.2.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -101,7 +102,6 @@
     "testMatch": [
       "**/__tests__/**/*.test.ts?(x)"
     ],
-    "testEnvironment": "node",
     "moduleNameMapper": {
       "@/(.*)$": "<rootDir>/$1"
     }
