--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -33,8 +33,8 @@ test:
   artifacts:
     paths:
       - coverage
-      - __test__/pacts
-      - __test__/logs
+      - __tests__/pacts
+      - __tests__/logs
     expire_in: 1 day
 
 pages:
@@ -52,7 +52,7 @@ publish:
   image: pactfoundation/pact-cli:latest-node14
   stage: Pact-publish
   script:
-    - "pact-broker publish __test__/pacts --consumer-app-version=$VERSION_REF --tag=all"
+    - "pact-broker publish __tests__/pacts --consumer-app-version=$VERSION_REF --tag=all"
   dependencies:
     - test
 
