--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -28,7 +28,7 @@ test:
     FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
     FRONTEND_CONTAINER_NAME: "$CI_PROJECT_PATH_SLUG-$CI_JOB_NAME-$CI_JOB_ID_frontend"
   script:
-    - docker build --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG --target=test .
+    - docker build --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG -f docker/remote.Dockerfile --target=test .
     - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
     - docker cp $FRONTEND_CONTAINER_NAME:/app/coverage .
     - docker cp $FRONTEND_CONTAINER_NAME:/app/__tests__/pacts .
@@ -120,7 +120,7 @@ build:
     - export DOCKER_CONFIG=$PWD/.dockerconfig
     - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN $CI_REGISTRY
   script:
-    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF --target remote --pull .
+    - docker build -t $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF -f docker/remote.Dockerfile --target remote --pull .
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF
   after_script:
     - docker logout $CI_REGISTRY
