--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -26,15 +26,15 @@ test:
   variables:
     FRONTEND_IMAGE_NAME: "gitlabci_{{cookiecutter.project_slug}}_frontend"
     FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
-    FRONTEND_CONTAINER_NAME: "$CI_PROJECT_PATH_SLUG-$CI_JOB_NAME-$CI_JOB_ID_frontend"
+    FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
   script:
-    - docker build --tag=$FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG -f docker/remote.Dockerfile --target=test .
-    - docker run --name=$FRONTEND_CONTAINER_NAME $FRONTEND_IMAGE_NAME:$FRONTEND_IMAGE_TAG
-    - docker cp $FRONTEND_CONTAINER_NAME:/app/coverage .
-    - docker cp $FRONTEND_CONTAINER_NAME:/app/__tests__/pacts .
+    - docker build --tag=${FRONTEND_IMAGE_NAME}:${FRONTEND_IMAGE_TAG} -f docker/remote.Dockerfile --target=test .
+    - docker run --name=${FRONTEND_CONTAINER_NAME} ${FRONTEND_IMAGE_NAME}:${FRONTEND_IMAGE_TAG}
+    - docker cp ${FRONTEND_CONTAINER_NAME}:/app/coverage .
+    - docker cp ${FRONTEND_CONTAINER_NAME}:/app/__tests__/pacts .
   after_script:
-    - docker stop $FRONTEND_CONTAINER_NAME
-    - docker container rm $FRONTEND_CONTAINER_NAME
+    - docker stop ${FRONTEND_CONTAINER_NAME}
+    - docker container rm ${FRONTEND_CONTAINER_NAME}
   coverage: /All files[^|]*\|[^|]*\s+([\d\.]+)/
   artifacts:
     paths:
