--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -6,53 +6,53 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "mock": "./bin/pact_stub_server.sh",
-    "test": "npx jest --testPathIgnorePatterns=pact/contracts",
-    "pact": "npx jest pact/contracts --testEnvironment=node",
+    "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
+    "pact": "npx jest pact/contracts --detectOpenHandles",
     "eslint": "npx eslint . --fix-dry-run",
     "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.5.1",
+    "@reduxjs/toolkit": "^1.6.0",
+    "@sentry/nextjs": "^6.6.0",
     "axios": "^0.21.1",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^10.1.3",
-    "next-redux-wrapper": "^6.0.2",
+    "next": "^10.2.3",
+    "next-redux-wrapper": "^7.0.0",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "styled-components": "^5.2.3",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "styled-components": "^5.3.0",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
-    "@pact-foundation/pact": "^9.15.4",
-    "@testing-library/jest-dom": "^5.11.10",
-    "@testing-library/react": "^11.2.6",
+    "@pact-foundation/pact": "^9.15.5",
+    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/react": "^11.2.7",
     "@types/basic-auth": "^1.1.3",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "@types/react": "^17.0.3",
+    "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.12.2",
+    "@types/react": "^17.0.11",
     "@types/react-redux": "^7.1.16",
-    "@types/styled-components": "^5.1.9",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@types/styled-components": "^5.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.24.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.23.2",
-    "jest": "^26.6.3",
-    "jest-pact": "^0.8.3",
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.4"
+    "eslint-plugin-react": "^7.24.0",
+    "jest": "^27.0.4",
+    "jest-pact": "^0.9.0",
+    "prettier": "^2.3.1",
+    "typescript": "^4.3.2"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -90,10 +90,17 @@
       "prettier/prettier": "error",
       "@typescript-eslint/explicit-module-boundary-types": "off",
       "react/prop-types": 0,
+      "react/no-unescaped-entities": 0,
       "camelcase": [
         2,
         {
           "properties": "always"
+        }
+      ],
+      "@typescript-eslint/no-unused-vars": [
+        "warn",
+        {
+          "varsIgnorePattern": "^_"
         }
       ]
     }
