--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "{{cookiecutter.project_slug}}",
+  "name": "test",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -13,12 +13,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.0",
-    "@sentry/nextjs": "^6.6.0",
+    "@sentry/nextjs": "^6.7.1",
     "axios": "^0.21.1",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^10.2.3",
-    "next-redux-wrapper": "^7.0.0",
+    "next": "^11.0.0",
+    "next-redux-wrapper": "^7.0.2",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,19 +30,20 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "^9.15.5",
-    "@testing-library/jest-dom": "^5.13.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
-    "@types/node": "^15.12.2",
+    "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.10",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "babel-plugin-styled-components": "^1.12.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-next": "^11.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-node": "^11.1.0",
@@ -50,9 +51,9 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^27.0.4",
-    "jest-pact": "^0.9.0",
+    "jest-pact": "^0.9.1",
     "prettier": "^2.3.1",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.4"
   },
   "prettier": {
     "arrowParens": "avoid",
