--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -13,47 +13,48 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
-    "@sentry/nextjs": "^6.10.0",
-    "axios": "^0.21.1",
+    "@sentry/nextjs": "^6.12.0",
+    "axios": "^0.21.3",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
-    "next": "^11.0.1",
-    "next-redux-wrapper": "^7.0.2",
+    "next": "^11.1.2",
+    "next-redux-wrapper": "^7.0.4",
     "nookies": "^2.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-is": "^17.0.2",
-    "react-redux": "^7.2.4",
+    "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^11.1.2",
     "@pact-foundation/pact": "^9.16.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^16.4.13",
-    "@types/react": "^17.0.16",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.10",
+    "@types/react": "^17.0.20",
     "@types/react-redux": "^7.1.18",
-    "@types/styled-components": "^5.1.12",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@types/styled-components": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^4.30.0",
+    "@typescript-eslint/parser": "^4.30.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.32.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-react": "^7.24.0",
-    "jest": "^27.0.6",
+    "eslint-plugin-react": "^7.25.1",
+    "jest": "^27.1.0",
     "jest-pact": "^0.9.1",
     "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -83,6 +84,7 @@
     ],
     "extends": [
       "eslint:recommended",
+      "next",
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
       "prettier"
