Update dependencies, use envs for sentry variable

--- a/{{cookiecutter.project_dirname}}/.env_template
+++ b/{{cookiecutter.project_dirname}}/.env_template
@@ -3,3 +3,5 @@ NEXT_PUBLIC_API_URL=https://localhost:8443
 NODE_ENV=development
 REACT_ENVIRONMENT=Development
 SENTRY_AUTH_TOKEN='__SENTRY_AUTH_TOKEN__'
+SENTRY_ORG='__SENTRY_ORG__'
+SENTRY_URL='__SENTRY_URL__'
