--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -13,9 +13,9 @@ variables:
   COMPOSE_DOCKER_CLI_BUILD: 1
   DOCKER_BUILDKIT: 1
   PACT_CONSUMER_NAME: {{cookiecutter.project_slug}}-frontend
-  SENTRY_ORG: __SENTRY_ORG__
+  SENTRY_ORG: $SENTRY_ORG
   SENTRY_PROJECT_NAME: {{cookiecutter.project_slug}}-frontend
-  SENTRY_URL: __SENTRY_URL__
+  SENTRY_URL:  $SENTRY_URL
   VERSION_BEFORE_REF: $CI_COMMIT_BEFORE_SHA
   VERSION_REF: $CI_COMMIT_SHA
 
@@ -166,6 +166,8 @@ build:
       --file=docker/remote.Dockerfile
       --target=remote
       --build-arg=SENTRY_AUTH_TOKEN
+      --build-arg=SENTRY_ORG
+      --build-arg=SENTRY_URL
       --pull .
     - docker push $CI_REGISTRY/$CI_PROJECT_PATH:$VERSION_REF
   after_script:
