--- a/{{cookiecutter.project_dirname}}/package.json
+++ b/{{cookiecutter.project_dirname}}/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "{{cookiecutter.project_slug}}",
+  "name": "template",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production node server.js",
+    "start": "node server.js",
     "test": "npx jest --testPathIgnorePatterns=pact/contracts --testEnvironment=jsdom --detectOpenHandles",
     "pact": "npx jest pact/contracts --detectOpenHandles",
     "eslint": "npx eslint . --fix-dry-run",
     "audit:fix": "npm i --package-lock-only && npm audit fix && rm yarn.lock && yarn import && rm package-lock.json"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.6.1",
-    "@sentry/nextjs": "^6.13.2",
+    "@reduxjs/toolkit": "^1.6.2",
+    "@sentry/nextjs": "^6.13.3",
     "axios": "^0.22.0",
     "basic-auth": "^2.0.1",
     "express": "^4.17.1",
@@ -32,16 +32,16 @@
     "@next/eslint-plugin-next": "^11.1.2",
     "@pact-foundation/pact": "^9.16.3",
     "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.1",
+    "@testing-library/react": "^12.1.2",
     "@types/basic-auth": "^1.1.3",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.10.2",
-    "@types/react": "^17.0.26",
-    "@types/react-redux": "^7.1.18",
-    "@types/styled-components": "^5.1.14",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@types/node": "^16.10.3",
+    "@types/react": "^17.0.27",
+    "@types/react-redux": "^7.1.19",
+    "@types/styled-components": "^5.1.15",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
@@ -51,7 +51,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.26.1",
-    "jest": "^27.2.4",
+    "jest": "^27.2.5",
     "jest-pact": "^0.9.1",
     "prettier": "^2.4.1",
     "typescript": "^4.4.3"
