Update readme and gitlab-ci

--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -82,7 +82,7 @@ test-with-pacts:
 test:
   extends: .test
   rules:
-    - if: $PACT_ENABLED == null
+    - if: $PACT_ENABLED != true
   script:
     - echo $CI_COMMIT_TAG $CI_COMMIT_BRANCH
     - >
