--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -135,12 +135,12 @@ can-i-deploy_development:
       variables:
         DEPLOY_ENV: development
 
-can-i-deploy_integration:
+can-i-deploy_staging:
   extends: .can-i-deploy
   rules:
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       variables:
-        DEPLOY_ENV: integration
+        DEPLOY_ENV: staging
 
 can-i-deploy_production:
   extends: .can-i-deploy
@@ -181,16 +181,16 @@ build:
   rules:
     - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       variables:
-        DEPLOY_ENVIRONMENT: development
+        ENVIRONMENT_SLUG: dev
 
-.integration:
+.staging:
   environment:
-    name: Integration
-    url: https://test.{{cookiecutter.project_slug}}.com
+    name: Staging
+    url: https://stage.{{cookiecutter.project_slug}}.com
   rules:
     - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       variables:
-        DEPLOY_ENVIRONMENT: integration
+        ENVIRONMENT_SLUG: stage
 
 .production:
   environment:
@@ -199,39 +199,52 @@ build:
   rules:
     - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       variables:
-        DEPLOY_ENVIRONMENT: production
+        ENVIRONMENT_SLUG: prod
 
-.deploy-base:
+.deploy:
   stage: Deploy
   image:
     name: docker:20
   services:
     - docker:20-dind
+  variables:
+    TF_ROOT: ${CI_PROJECT_DIR}/terraform
+  before_script:
+    - export TF_VAR_service_container_image=${CI_REGISTRY_IMAGE}:${VERSION_REF}
   script:
     - >
-      docker run --rm -v $PWD:/app -v $KUBE_CA_PEM_FILE:$KUBE_CA_PEM_FILE
-      -e KUBECONFIG=/tmp/.kube/config
-      -e DEPLOY_ENVIRONMENT
-      -e DEPLOY_VERSION
-      -e KUBE_CA_PEM_FILE
-      -e KUBE_TOKEN
-      -e KUBE_URL
-      --entrypoint=""
-      bitnami/kubectl:latest /app/scripts/deploy.sh
-
-.deploy:
-  extends: .deploy-base
-  before_script:
-    - export DEPLOY_VERSION=$VERSION_REF
+      docker run --rm
+      -u `id -u`
+      -v ${PWD}:${PWD}
+      -w ${PWD}
+      -e CI_JOB_TOKEN
+      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{cookiecutter.project_slug}}-${ENVIRONMENT_SLUG}
+      -e TF_ROOT
+      -e TF_VAR_api_url
+      -e TF_VAR_digitalocean_cluster_name="${DIGITALOCEAN_CLUSTER_NAME}"
+      -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
+      -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
+      -e TF_VAR_project_description
+      -e TF_VAR_project_domain="${DOMAIN}"
+      -e TF_VAR_service_container_image
+      -e TF_VAR_service_container_port
+      -e TF_VAR_service_replicas
+      registry.gitlab.com/gitlab-org/terraform-images/stable:latest ./scripts/deploy.sh
+  artifacts:
+    name: plan
+    paths:
+      - ${TF_ROOT}/plan.cache
+    reports:
+      terraform: ${TF_ROOT}/plan.json
 
 deploy_development:
   extends:
     - .development
     - .deploy
 
-deploy_integration:
+deploy_staging:
   extends:
-    - .integration
+    - .staging
     - .deploy
 
 deploy_production:
@@ -240,9 +253,9 @@ deploy_production:
     - .deploy
 
 .rollback:
-  extends: .deploy-base
+  extends: .deploy
   before_script:
-    - export DEPLOY_VERSION=$VERSION_BEFORE_REF
+    - export TF_VAR_container_image=${CI_REGISTRY_IMAGE}:${VERSION_BEFORE_REF}
 
 rollback_development:
   extends:
@@ -253,9 +266,9 @@ rollback_development:
       when: manual
       allow_failure: true
 
-rollback_integration:
+rollback_staging:
   extends:
-    - .integration
+    - .staging
     - .rollback
   rules:
     - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
@@ -293,7 +306,7 @@ create-version-tag_development:
       --version $VERSION_REF
       --tag "env:development"
 
-create-version-tag_integration:
+create-version-tag_staging:
   extends: .create-version-tag
   rules:
     - if: $PACT_ENABLED == "true" && $PACT_BROKER_BASE_URL && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
@@ -306,7 +319,7 @@ create-version-tag_integration:
       pactfoundation/pact-cli:latest-node14 pact-broker create-version-tag
       --pacticipant $PACT_CONSUMER_NAME
       --version $VERSION_REF
-      --tag "env:integration"
+      --tag "env:staging"
 
 create-version-tag_production:
   extends: .create-version-tag
@@ -346,13 +359,13 @@ sentry_success_development:
       variables:
         SENTRY_ENV: Development
 
-sentry_success_integration:
+sentry_success_staging:
   extends: .sentry_deploy_success
   rules:
     - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       when: on_success
       variables:
-        SENTRY_ENV: Integration
+        SENTRY_ENV: Staging
 
 sentry_success_production:
   extends: .sentry_deploy_success
@@ -384,13 +397,13 @@ sentry_failure_development:
       variables:
         SENTRY_ENV: Development
 
-sentry_failure_integration:
+sentry_failure_staging:
   extends: .sentry_deploy_failure
   rules:
     - if: $SENTRY_DSN && $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       when: on_failure
       variables:
-        SENTRY_ENV: Integration
+        SENTRY_ENV: Staging
 
 sentry_failure_production:
   extends: .sentry_deploy_failure
