--- a/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
+++ b/{{cookiecutter.project_dirname}}/.gitlab-ci.yml
@@ -11,9 +11,9 @@ stages:
 variables:
   COMPOSE_DOCKER_CLI_BUILD: 1
   DOCKER_BUILDKIT: 1
-  PACT_CONSUMER_NAME: {{cookiecutter.project_slug}}-frontend
+  PACT_CONSUMER_NAME: {{ cookiecutter.project_slug }}-frontend
   SENTRY_ORG: $SENTRY_ORG
-  SENTRY_PROJECT_NAME: {{cookiecutter.project_slug}}-frontend
+  SENTRY_PROJECT_NAME: {{ cookiecutter.project_slug }}-frontend
   SENTRY_URL:  $SENTRY_URL
   VERSION_BEFORE_REF: $CI_COMMIT_BEFORE_SHA
   VERSION_REF: $CI_COMMIT_SHA
@@ -51,7 +51,7 @@ test:
   services:
     - docker:20-dind
   variables:
-    FRONTEND_IMAGE_NAME: "gitlabci_{{cookiecutter.project_slug}}_frontend"
+    FRONTEND_IMAGE_NAME: "gitlabci_{{ cookiecutter.project_slug }}_frontend"
     FRONTEND_IMAGE_TAG: "$CI_JOB_NAME-$CI_JOB_ID"
     FRONTEND_CONTAINER_NAME: "${CI_PROJECT_PATH_SLUG}-${CI_JOB_NAME}-${CI_JOB_ID}_frontend"
   script:
@@ -177,7 +177,7 @@ build:
 .development:
   environment:
     name: Development
-    url: https://dev.{{cookiecutter.project_slug}}.com
+    url: {{ cookiecutter.project_url_dev }}
   rules:
     - if: $CI_COMMIT_BRANCH == "develop" && $CI_JOB_TRIGGERED != "true"
       variables:
@@ -186,7 +186,7 @@ build:
 .staging:
   environment:
     name: Staging
-    url: https://stage.{{cookiecutter.project_slug}}.com
+    url: {{ cookiecutter.project_url_stage }}
   rules:
     - if: $CI_COMMIT_BRANCH == "master" && $CI_JOB_TRIGGERED != "true"
       variables:
@@ -195,7 +195,7 @@ build:
 .production:
   environment:
     name: Production
-    url:  https://www.{{cookiecutter.project_slug}}.com
+    url:  {{ cookiecutter.project_url_prod }}
   rules:
     - if: $CI_COMMIT_TAG && $CI_JOB_TRIGGERED != "true"
       variables:
@@ -218,14 +218,13 @@ build:
       -v ${PWD}:${PWD}
       -w ${PWD}
       -e CI_JOB_TOKEN
-      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{cookiecutter.project_slug}}-${ENVIRONMENT_SLUG}
+      -e TF_ADDRESS=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/terraform/state/{{ cookiecutter.project_slug }}-${ENVIRONMENT_SLUG}
       -e TF_ROOT
       -e TF_VAR_digitalocean_cluster_name="${DIGITALOCEAN_CLUSTER_NAME}"
       -e TF_VAR_digitalocean_token="${DIGITALOCEAN_TOKEN}"
       -e TF_VAR_environment="${CI_ENVIRONMENT_NAME}"
       -e TF_VAR_internal_api_url="${INTERNAL_API_URL}"
-      -e TF_VAR_project_domain="${DOMAIN}"
-      -e TF_VAR_project_protocol="${PROTOCOL}"
+      -e TF_VAR_project_url="${PROJECT_URL}"
       -e TF_VAR_service_container_image
       -e TF_VAR_service_container_port
       -e TF_VAR_service_replicas
